--- a/f3Ftimer/src/main/res/values/strings.xml
+++ b/f3Ftimer/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
     <string name="BLUETOOTH_HC_05" translatable="false">Bluetooth - HC-05</string>
     <string name="TCP_IO" translatable="false">TCP/IP Socket - f3ftimer-server:1234</string>
     <string name="UDP" translatable="false">UDP Socket - PiCam</string>
+    <string name="MULTICAST" translatable="false">Multicast Socket - dragon-eye</string>
     <string name="Demo">Demo Mode - On Screen Buzzers</string>
     <string name="input_tcpio_ip">IP / host name for \"f3ftimer-server\"</string>
     <string name="bluetooth_paired_device">HC-05 Paired Device</string>
